add ConfusingArgumentToVarargsMethod